--- a/style.css
+++ b/style.css
@@ -108,12 +108,18 @@ img {
 .mp3 {
     position: relative;
     float: right;
-    bottom: 695px;
+    bottom: 715px;
     right: 200px;
 }
 
 @media only screen and (max-width: 1100px) {
     .mp3{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    #mp3Txt{
         display: none;
     }
 }
