--- a/style.css
+++ b/style.css
@@ -71,8 +71,6 @@ li:nth-child( odd ) {
     margin-bottom: 20px;
     position: relative;
     top: 400px;
-    
-
 }
 
 h1, p {
@@ -91,6 +89,16 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media only screen and (max-width: 1000px) {
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 300px;
+        height: 200px;
+    }
 }
 
 #button {
